# backend/api/gen/go/identity/v1/org_unit.pb.gw.go
@@ -35,11 +35,19 @@ var (
 	_ = metadata.Join
 )
 
+var filter_OrgUnitService_ListOrgUnits_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
 func request_OrgUnitService_ListOrgUnits_0(ctx context.Context, marshaler runtime.Marshaler, client OrgUnitServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq ListOrgUnitsRequest
 		metadata runtime.ServerMetadata
 	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OrgUnitService_ListOrgUnits_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
 	if req.Body != nil {
 		_, _ = io.Copy(io.Discard, req.Body)
 	}
@@ -52,7 +60,66 @@ func local_request_OrgUnitService_ListOrgUnits_0(ctx context.Context, marshaler 
 		protoReq ListOrgUnitsRequest
 		metadata runtime.ServerMetadata
 	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OrgUnitService_ListOrgUnits_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
 	msg, err := server.ListOrgUnits(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+var filter_OrgUnitService_ListOrgUnitChildren_0 = &utilities.DoubleArray{Encoding: map[string]int{"parent_id": 0}, Base: []int{1, 1, 0}, Check: []int{0, 1, 2}}
+
+func request_OrgUnitService_ListOrgUnitChildren_0(ctx context.Context, marshaler runtime.Marshaler, client OrgUnitServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListOrgUnitChildrenRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["parent_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "parent_id")
+	}
+	protoReq.ParentId, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "parent_id", err)
+	}
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OrgUnitService_ListOrgUnitChildren_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ListOrgUnitChildren(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_OrgUnitService_ListOrgUnitChildren_0(ctx context.Context, marshaler runtime.Marshaler, server OrgUnitServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListOrgUnitChildrenRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["parent_id"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "parent_id")
+	}
+	protoReq.ParentId, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "parent_id", err)
+	}
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OrgUnitService_ListOrgUnitChildren_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ListOrgUnitChildren(ctx, &protoReq)
 	return msg, metadata, err
 }
 
@@ -280,6 +347,26 @@ func RegisterOrgUnitServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 		forward_OrgUnitService_ListOrgUnits_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_OrgUnitService_ListOrgUnitChildren_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/go.bald.admin.identity.v1.OrgUnitService/ListOrgUnitChildren", runtime.WithHTTPPathPattern("/v1/org-units/{parent_id}/children"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OrgUnitService_ListOrgUnitChildren_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_OrgUnitService_ListOrgUnitChildren_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodGet, pattern_OrgUnitService_CountOrgUnits_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -457,6 +544,23 @@ func RegisterOrgUnitServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 		}
 		forward_OrgUnitService_ListOrgUnits_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_OrgUnitService_ListOrgUnitChildren_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/go.bald.admin.identity.v1.OrgUnitService/ListOrgUnitChildren", runtime.WithHTTPPathPattern("/v1/org-units/{parent_id}/children"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OrgUnitService_ListOrgUnitChildren_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_OrgUnitService_ListOrgUnitChildren_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodGet, pattern_OrgUnitService_CountOrgUnits_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -564,6 +668,7 @@ func RegisterOrgUnitServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 var (
 	pattern_OrgUnitService_ListOrgUnits_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "org-units"}, ""))
+	pattern_OrgUnitService_ListOrgUnitChildren_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "org-units", "parent_id", "children"}, ""))
 	pattern_OrgUnitService_CountOrgUnits_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "org-units", "count"}, ""))
 	pattern_OrgUnitService_GetOrgUnit_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "org-units", "code"}, ""))
 	pattern_OrgUnitService_CreateOrgUnit_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "org-units"}, ""))
@@ -574,6 +679,7 @@ var (
 
 var (
 	forward_OrgUnitService_ListOrgUnits_0        = runtime.ForwardResponseMessage
+	forward_OrgUnitService_ListOrgUnitChildren_0 = runtime.ForwardResponseMessage
 	forward_OrgUnitService_CountOrgUnits_0       = runtime.ForwardResponseMessage
 	forward_OrgUnitService_GetOrgUnit_0          = runtime.ForwardResponseMessage
 	forward_OrgUnitService_CreateOrgUnit_0       = runtime.ForwardResponseMessage
